--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -16,7 +16,7 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: #1e3990
     border-width: 3px;
 }
 
@@ -25,7 +25,7 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #1e3990;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -61,7 +61,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #1e3990;
 }
 
 .bg-dark {
@@ -121,7 +121,7 @@ aside {
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #1e3990!important;
     background-color: transparent;
 }
 
@@ -162,7 +162,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: #1e3990;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -177,7 +177,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #1e3990;
     }
 }
 
@@ -203,10 +203,11 @@ header .header-content {
 }
 
 header .header-content .header-content-inner h1 {
-    margin-top: 0;
+    margin-top: 30;
     margin-bottom: 0;
     text-transform: uppercase;
     font-weight: 700;
+    font-size: 45px !important;
 }
 
 header .header-content .header-content-inner hr {
@@ -217,7 +218,8 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,.7);
+    text-shadow: 2px 2px 3px white;
+    color: rgba(25,25,155,.7);
 }
 
 @media(min-width:768px) {
@@ -332,7 +334,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #1e3990;
 }
 
 .no-gutter > [class*=col-] {
@@ -394,9 +396,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #1e3990;
     color: #fff;
-    background-color: #f05f40;
+    background-color: #1e3990;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
