--- a/css/creative.css
+++ b/css/creative.css
@@ -207,6 +207,8 @@ header .header-content .header-content-inner h1 {
     margin-bottom: 0;
     text-transform: uppercase;
     font-weight: 700;
+    color: rgba(25,25,155,.7);
+    text-shadow: 2px 2px 3px white;
     font-size: 45px !important;
 }
 
